--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,9 @@ speed-measure-plugin*.json
 npm-debug.log
 yarn-error.log
 
+# Angular cache
+/.angular/cache
+
 # System files
 .DS_Store
 Thumbs.db
