Update baseHref to /jr/ to match S3 folder structure

--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,7 @@
           },
           "configurations": {
             "production": {
-              "baseHref": "/juniorliu/",
+              "baseHref": "/jr/",
               "budgets": [
                 {
                   "type": "initial",
