Add deployUrl configuration for proper Amplify subfolder deployment

--- a/angular.json
+++ b/angular.json
@@ -32,6 +32,7 @@
           "configurations": {
             "production": {
               "baseHref": "/jr/",
+              "deployUrl": "/jr/",
               "budgets": [
                 {
                   "type": "initial",
