Fix baseHref for root deployment - remove /jr/ subpath configuration

--- a/angular.json
+++ b/angular.json
@@ -31,8 +31,8 @@
           },
           "configurations": {
             "production": {
-              "baseHref": "/jr/",
-              "deployUrl": "/jr/",
+              "baseHref": "/",
+              "deployUrl": "/",
               "budgets": [
                 {
                   "type": "initial",
